---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"use-trusted-publishing/cargo-publish.yml\")).run()?"
---
info[use-trusted-publishing]: prefer trusted publishing for authentication
  --> @@INPUT@@:12:14
   |
12 |         run: cargo publish
   |         ---  ^^^^^^^^^^^^^ this command
   |         |
   |         this step
   |
   = note: audit confidence → High

info[use-trusted-publishing]: prefer trusted publishing for authentication
  --> @@INPUT@@:17:14
   |
17 |         run: cargo +nightly publish
   |         ---  ^^^^^^^^^^^^^^^^^^^^^^ this command
   |         |
   |         this step
   |
   = note: audit confidence → High

info[use-trusted-publishing]: prefer trusted publishing for authentication
  --> @@INPUT@@:24:11
   |
23 |           run: |
   |           --- this step
24 | /           cargo \
25 | |             publish \
26 | |             --allow-dirty \
27 | |             --no-verify
   | |_______________________^ this command
   |
   = note: audit confidence → High

info[use-trusted-publishing]: prefer trusted publishing for authentication
  --> @@INPUT@@:49:14
   |
49 |         run: cargo publish
   |         ---  ^^^^^^^^^^^^^ this command
   |         |
   |         this step
   |
   = note: audit confidence → High

info[use-trusted-publishing]: prefer trusted publishing for authentication
  --> @@INPUT@@:54:14
   |
54 |         run: cargo +nightly publish
   |         ---  ^^^^^^^^^^^^^^^^^^^^^^ this command
   |         |
   |         this step
   |
   = note: audit confidence → High

info[use-trusted-publishing]: prefer trusted publishing for authentication
  --> @@INPUT@@:61:11
   |
60 |           run: |
   |           --- this step
61 | /           cargo `
62 | |             publish `
63 | |             --allow-dirty `
64 | |             --no-verify
   | |_______________________^ this command
   |
   = note: audit confidence → High

9 findings (3 suppressed): 6 informational, 0 low, 0 medium, 0 high
